# django-altcha

./: CHANGELOG.rst  Makefile  README.md  README.rst  RELEASE.md  pyproject.toml
.github/workflows/: docs-ci.yml  pypi-release.yml  run-unit-tests.yml
django_altcha/: __init__.py  conf.py  utils.py
django_altcha/static/altcha/: altcha.min.js
django_altcha/static/altcha/dist_i18n/: all.min.js
django_altcha/templates/: altcha_widget.html
docs/source/: conf.py  index.md  index.rst  installation.rst
tests/: settings.py  test_cache.py  test_field.py  test_logging.py  test_utils.py  test_widget.py  urls.py
