[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-altcha"
description = "Django field and widget for Altcha CAPTCHA."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "nexB Inc.", email = "info@nexb.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2",
    "altcha>=0.1.9",
]
keywords = ["captcha", "django", "widget", "form", "altcha"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/aboutcode-org/django-altcha"
