[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-altcha"
version = "0.0.1"
description = "Django field and widget for Altcha CAPTCHA."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "nexB Inc.", email = "info@nexb.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2",
    "altcha>=0.1.9",
]
keywords = ["captcha", "django", "widget", "form", "altcha"]

[project.optional-dependencies]
dev = [
  "build",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/aboutcode-org/django-altcha"

[tool.ruff]
exclude = [
    "docs",
]

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "UP", # pyupgrade
    "S",  # flake8-bandit
    "I",  # isort
    "C9", # McCabe complexity
]
